in top page add left side add button

--- a/gravity/css/style.css
+++ b/gravity/css/style.css
@@ -1,3 +1,176 @@
 body {
     font-family: 'Fira Sans', sans-serif;
+    color: #8d8d8d;
+    font-size: 18px;
 }
+
+button {
+    display: block;
+    border: none;
+    background: transparent;
+}
+
+h1, h2, h3, h4, h5 h6 {
+    font-style: normal;
+    font-weight: 700;
+    color: #151515;
+    margin: 0;
+    padding: 0;
+}
+
+.btn {
+    background: #3726F2;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
+    padding: 13px 26px;
+    display: inline;
+    border-radius: 0;
+    letter-spacing: .3em;
+    text-align: center;
+    transition: all .5s ease;
+}
+
+.btn:hover {
+    background: #200fd6;
+    color: #FFFFFF;
+}
+
+.header {
+
+}
+
+.nav {
+    padding-top: 59px;
+    margin-bottom: 127px;
+}
+
+.logo {
+
+}
+
+.search {
+}
+
+.menu {
+}
+
+.offer-cont__title {
+    font-size: 60px;
+    letter-spacing: -.01em;
+    line-height: 1.1em;
+}
+
+.offer-cont__text {
+    margin: 30px 0 56px;
+}
+
+.offer-cont_btn {
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
