sixth page - testimonials carousel

--- a/gravity/css/style.css
+++ b/gravity/css/style.css
@@ -38,6 +38,10 @@ h2 {
     font-size: 38px;
 }
 
+h3 {
+    font-size: 22px;
+}
+
 .btn {
     background: #3726F2;
     color: #FFFFFF;
@@ -192,11 +196,11 @@ h2 {
 }
 
 /*jquery*/
-.owl-carousel {
+.works-carousel {
     margin-top: 99px;
 }
 
-.owl-carousel .item, .owl-item {
+.works-carousel .item, .works-carousel .owl-item {
     width: 825px !important;
     position: relative;
 }
@@ -358,17 +362,43 @@ h2 {
 
 /*sixth page*/
 
-.contributor {
+.testimonials {
+    padding-top: 248px;
+}
 
+.contributor {
+    margin-top: 121px;
 }
 
 .contributor__title {
-
+    margin-bottom: 20px;
 }
 
 .contributor__desc {
 
 }
+
+.cont-photo {
+    display: block;
+
+}
+
+.contributor-carousel .owl-nav {
+    display: flex;
+    margin-top: -50px;
+    position: relative;
+}
+
+.contributor-carousel .owl-prev {
+    margin-right: 25px;
+}
+
+/*seventh page*/
+
+
+
+
+
 
 
 
